--- a/package.json
+++ b/package.json
@@ -4,10 +4,24 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run --watch src/index.tsx"
+    "dev": "bun run --watch src/index.tsx",
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "test:debug": "vitest --debug",
+    "test:verbose": "vitest --verbose",
+    "test:silent": "vitest --silent",
+    "lint": "biome lint --write",
+    "format": "biome format --write",
+    "check": "biome check",
+    "typecheck": "tsc --noEmit",
+    "prepare": "effect-language-service patch"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@biomejs/biome": "2.3.11",
+    "@effect/language-service": "^0.64.1",
+    "@types/bun": "latest",
+    "vitest": "^4.0.16"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -15,6 +29,7 @@
   "dependencies": {
     "@opentui/core": "^0.1.69",
     "@opentui/react": "^0.1.69",
+    "effect": "^3.19.14",
     "react": "^19.2.3"
   }
 }
